--- a/backend/vercel.json
+++ b/backend/vercel.json
@@ -1,12 +1,5 @@
 {
-  "installCommand": "npm install --legacy-peer-deps",
   "version": 2,
-  "builds": [
-    { "src": "server.js", "use": "@vercel/static" },
-    {
-      "src": "src/**/*",
-      "use": "@vercel/static"
-    }
-  ],
-  "routes": [{ "src": "/(.*)", "dest": "/" }]
+  "builds": [{ "src": "server.js", "use": "@vercel/node" }],
+  "routes": [{ "src": "/(.*)", "dest": "/server.js" }]
 }
